[package]
name = "drand"
description = "A drand client."
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bls12_381 = { version = "0.7.1", features = ["experimental"] }
futures = "0.3.26"
hex = "0.4.3"
pairing = "0.22.0"
reqwest = { version = "0.11.14", features = [ "json" ] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.9.1"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
hex-literal = "0.3.4"

