[package]
name = "dee"
description = "[ALPHA] An cli for drand."
version = "0.0.2"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/thibmeu/drand-rs"
repository = "https://github.com/thibmeu/drand-rs"
keywords = ["drand", "cli", "rng", "random"]
categories = ["command-line-utilities", "cryptography"]
default-run = "dee"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
colored = "2.0.0"
confy = "0.5.1"
drand_core = { path = "../drand_core" }
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.2.0"
tlock_age = { git = "https://github.com/thibmeu/tlock-rs", version = "0.1.0" }
tokio = { version = "1.26.0", features = ["full"] }
