[package]
name = "drand_core"
description = "A drand client library."
version = "0.0.7"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/drand-rs/tree/main/drand_core"
repository = "https://github.com/thibmeu/drand-rs"
keywords = ["drand", "rng", "random"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
anyhow = "1.0.72"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
async-trait = "0.1.72"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.174", features = ["derive", "rc"] }
serde_json = "1.0.103"
sha2 = "0.10.7"
url = { version = "2.4", features = ["serde"] }

[target.'cfg(wasm32)'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[dev-dependencies]
hex-literal = "0.4.1"
mockito = "1.1.0"
rand_chacha = "0.3.1"
tokio = { version = "1.29.1", features = ["full"] }
