[package]
name = "drand_core"
description = "A drand client library."
version = "0.0.17"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/drand-rs/tree/main/drand_core"
repository = "https://github.com/thibmeu/drand-rs"
keywords = ["drand", "rng", "random"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
hex = { workspace = true, features = ["serde"] }
rand = "0.8"
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = "2.0"
time = { workspace = true, features = ["parsing", "serde-well-known"], optional = true }
ureq = { version = "2.12", features = ["json"] }
url = { version = "2.5", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
ring = { version = "0.17", features = ["less-safe-getrandom-custom-or-rdrand", "wasm32_unknown_unknown_js"]}

[features]
default = ["time", "native-certs"]
native-certs = ["ureq/native-certs"]
time = ["dep:time"]

[dev-dependencies]
hex-literal = "0.4.1"
mockito = "1.4.0"
rand_chacha = "0.3.1"
